# mercury

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
docker/: docker-compose.yml
docker/unrealircd/: Dockerfile  unrealircd.conf
docs/: 01-getting-started.md  02-ui-overview.md  03-connecting.md  04-channels.md  05-messaging.md  06-nick-management.md  07-keyboard-reference.md
src/: error.rs  lib.rs  main.rs
src/irc/: channel.rs  client.rs  message.rs  mod.rs  user.rs
src/tui/: app.rs  layout.rs  mod.rs  ui.rs
tests/integration/: channel_test.rs  common.rs  connect_test.rs  user_test.rs
tests/unit/: app_test.rs  channel_test.rs  client_test.rs  user_test.rs
